--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <section id="personal" class="content-section">
       <h2>Personal Info</h2>
       <p>
-        Age: 21<br>
+        Age: <span id="age"></span>
+        <br>
         Location: Mpumalanga, South Africa<br>
         Email: calebndhlovu@email.com<br>
         Interests: Software Development, AI, Cloud Computing
@@ -87,5 +88,7 @@
       <a href="https://twitter.com/" target="_blank">Twitter</a>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
